# python_code_to_speech

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml  python_code_to_speech.py
snakeglish/: description.py  main.py  numberlines.py  speak.py
test_cases/hello_world/: description.txt
tests/: test_description.py
