[tool.poetry]
name = "snakeglish"
version = "0.1.0"
description = ""
authors = ["Shaun Verch"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
py = "^1.11.0"
pytest = "^7.1.2"
gTTS = "^2.2.4"
num2words = "^0.5.10"

[tool.poetry.dev-dependencies]
pylint = "^2.13.7"
pytest-snapshot = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
